# hyperwrite

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/app/: __init__.py  anti_ai_writing_style.md  cli.py  config.py  graph.py  main.py  models.py  service.py  storage.py
frontend/: components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx  switch.tsx  textarea.tsx
