[project]
name = "hyperwrite-backend"
version = "0.1.0"
description = "FastAPI backend for OpenRouter-powered writing workflows."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "pydantic-settings>=2.4.0",
  "langchain-openai>=0.2.0",
  "langgraph>=0.2.0",
]

[project.scripts]
hyperwrite = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = ["anti_ai_writing_style.md"]
